# ion-cli

./: .gitignore  Cargo.toml
.github/workflows/: build.yml
code-gen-core/: Cargo.toml
code-gen-core/src/: context.rs  generator.rs  lib.rs  utils.rs
code-gen-core/src/templates/java/: class.templ
code-gen-core/src/templates/rust/: Cargo.toml.templ  lib.templ  struct.templ
code-gen-projects/java/code-gen-demo/: settings.gradle.kts
code-gen-projects/java/code-gen-demo/lib/: build.gradle.kts
code-gen-projects/java/code-gen-demo/lib/src/test/resources/input/: nested_struct.ion
code-gen-projects/rust/code-gen-demo/: Cargo.toml  build.rs
code-gen-projects/rust/code-gen-demo/schema/: nested_struct.isl
code-gen-projects/rust/code-gen-demo/src/: lib.rs
code-gen-tests-runner/: Cargo.toml  build.rs
code-gen-tests-runner/src/: lib.rs
code-gen-tests-runner/tests/: code-gen-tests-java.rs  code-gen-tests-rust.rs
code-gen-tests-runner/tests/input/: nested_struct.ion  struct_with_fields.ion
code-gen-tests-runner/tests/schema/: nested_struct.isl  struct_with_fields.isl
ion-cli/: Cargo.toml
tests/: cli.rs
