[package]
name = "code-gen-core"
version = "0.1.0"
edition = "2021"
authors = ["The Ion Team <ion-team@amazon.com>"]
description = "Core library for code generation with Ion."
repository = "https://github.com/amzn/ion-cli"
license = "Apache-2.0"
categories = ["development-tools", "encoding", "parsing"]
keywords = ["format", "parse", "encode", "code-generation"]

[dependencies]
tera = {  version = "1.18.1" }
convert_case = { version = "0.6.0" }
ion-rs = {version = "1.0.0-rc.2", features = ["experimental"]}
ion-schema = "0.10.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = { version = "1.0.81", features = [ "arbitrary_precision", "preserve_order" ] }
thiserror = "1.0.50"

